@@ -7,6 +7,10 @@ Check other command/gui updates.
 
 Make loading effect presets update the 'top' line.
 
+Tidy up 'INFO' in xml files - only voices need engine status,
+
+startup state load doesn't set buffersize correctly - why?
+    size is ignored if loaded when already running which is reasonable.
 
 save part [n1] program <[n2] [s]>
 if 'n2' is present it saves to a bank slot and 's' optionally changes the name
